--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,38 @@
-<nav class="navbar navbar-light" style="height: 100px;">
+<nav class="navbar navbar-light header">
+  <div class="logo">
   <a class="navbar-brand" href="#">
-    <img src="/assets/images/logo_new.svg" width="30" height="30" class="d-inline-block align-top" alt="">
-    Reder-Systems Druckverlust
+    <img src="assets/images/logo_new.svg" width="130" height="30" class="d-inline-block align-self-center" alt="">
+    Durckverlustprogramm
   </a>
+  </div>
+
+  <div class="justify-content-end state-bar">
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Sprache
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="#">Action</a>
+        <a class="dropdown-item" href="#">Another action</a>
+        <a class="dropdown-item" href="#">Something else here</a>
+      </div>
+    </div>
+  </div>
+</nav>
+
+
+<div class="row" class="align-items-stretch">
+  <div class="col-1">
+      <div style="background-color: #ff4136;" class="align-items-stretch">
+fgd
+      </div>
+  </div>
+  <div class="col-auto">
+
+  </div>
+</div>
+
+
+<nav class="navbar fixed-bottom navbar-light footer">
+      Copyright
 </nav>
