--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+
+<link rel="stylesheet" href="app.component.scss">
 <nav class="navbar navbar-light header">
   <div class="logo">
   <a class="navbar-brand" href="#">
@@ -20,19 +22,31 @@
   </div>
 </nav>
 
-
-<div class="row" class="align-items-stretch">
-  <div class="col-1">
-      <div style="background-color: #ff4136;" class="align-items-stretch">
-fgd
+  <div class="content container-fluid">
+      <div class="row">
+        <div class="col-2">
+          <div class="sidebar">
+            <ul class="list-group">
+              <li class="list-group-item"><button type="button" class="btn">Rechner</button></li>
+              <li class="list-group-item"><button type="button" class="btn">Speichern</button></li>
+              <li class="list-group-item"><button type="button" class="btn">Import</button></li>
+              <li class="list-group-item"><button type="button" class="btn">Einstellungen</button></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-10">
+            <div class="container-fluid section-header">
+              Rechner
+            </div>
+        </div>
       </div>
   </div>
-  <div class="col-auto">
-
-  </div>
-</div>
-
 
 <nav class="navbar fixed-bottom navbar-light footer">
-      Copyright
+      @Copyright Michael Reder
+
+  <div class="justify-content-end" style="font-size: 14px">
+    <i class="fa fa-address-card"></i>
+    <span>  Druckverlust v1.0.0</span>
+  </div>
 </nav>
