--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,7 +23,43 @@
   }
 }
 
+.content {
+  height: -moz-calc(100% - 140px); /* Firefox */
+  height: -webkit-calc(100% - 140px); /* Chrome, Safari */
+  height: calc(100% - 140px); /* IE9+ and future browsers */
+  margin: 20px 0 20px 0;
+
+  .row {
+    height: 100%;
+  }
+
+  .sidebar {
+    height: 100%;
+    border: 2px solid #FC7900;
+    border-radius: 6px;
+
+    .list-group .list-group-item {
+      border: 0px;
+      padding: 5px 0 5px 0;
+
+      button {
+        width: 100%;
+        background-color: white;
+        border: 0px;
+      }
+    }
+  }
+
+  .section-header {
+    background-color: #506069;
+    padding: 15px 0 15px 20px;
+    font-size: 20px;
+    color: white;
+  }
+}
+
 .footer {
   color: white;
   background-color: #506069;
 }
+
