--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,11 +26,14 @@
       <div class="row">
         <div class="col-2">
           <div class="sidebar">
+            <div class="sidebar-header">
+              <span style="font-size: 18px;"> Tools </span>
+            </div>
             <ul class="list-group">
-              <li class="list-group-item"><button type="button" class="btn">Rechner</button></li>
-              <li class="list-group-item"><button type="button" class="btn">Speichern</button></li>
-              <li class="list-group-item"><button type="button" class="btn">Import</button></li>
-              <li class="list-group-item"><button type="button" class="btn">Einstellungen</button></li>
+              <li class="list-group-item"><button type="button" class="btn text-left" [routerLink]="/calculation" routerDirection="root">Rechner</button></li>
+              <li class="list-group-item"><button type="button" class="btn text-left">Speichern</button></li>
+              <li class="list-group-item"><button type="button" class="btn text-left">Import</button></li>
+              <li class="list-group-item"><button type="button" class="btn text-left">Einstellungen</button></li>
             </ul>
           </div>
         </div>
@@ -38,6 +41,13 @@
             <div class="container-fluid section-header">
               Rechner
             </div>
+
+
+            <router-outlet id="root-container"></router-outlet>
+
+            <!--
+            <div id="root-container" *ngFor="let page of pages" [routerLink]="[page.url]" routerDirection="root" [replaceUrl]="true"></div>-->
+
         </div>
       </div>
   </div>
@@ -46,7 +56,6 @@
       @Copyright Michael Reder
 
   <div class="justify-content-end" style="font-size: 14px">
-    <i class="fa fa-address-card"></i>
     <span>  Druckverlust v1.0.0</span>
   </div>
 </nav>
