--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -86,5 +86,7 @@
 }
 
 #root-container {
-  height: 100%;
+  min-height: -moz-calc(100% - 40px); /* Firefox */
+  min-height: -webkit-calc(100% - 40px); /* Chrome, Safari */
+  min-height: calc(100% - 40px); /* IE9+ and future browsers */
 }
