--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,10 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 @import "~bootstrap/scss/bootstrap";
+
+.section-header {
+    background-color: #506069;
+    padding: 15px 0 15px 20px;
+    font-size: 20px;
+    color: white;
+  }
