--- a/src/app/components/calculation/calculation.page.html
+++ b/src/app/components/calculation/calculation.page.html
@@ -1,3 +1,7 @@
+<div class="container-fluid section-header">
+    Rechner
+  </div>
+  
 <div *ngIf="projectManagment.currentProject !== null; else setupProject">
     <app-project-setup></app-project-setup>
 </div>
