Added Project Selektion

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,9 +36,7 @@
           </div>
         </div>
         <div class="col-10">
-            <div id="root-container">
-              <router-outlet></router-outlet>
-            </div>
+              <router-outlet class="h-100"></router-outlet>
         </div>
       </div>
   </div>
