--- a/src/app/components/calculation/project-setup/project-setup.page.html
+++ b/src/app/components/calculation/project-setup/project-setup.page.html
@@ -24,7 +24,7 @@
           </div>
           <div class="col-4">
             <label for="editor">Bearbeiter*</label>
-            <input [formControl]="projectGroup.get('editor')"  type="text" class="form-control" id="editor" placeholder="Bearbeiter">
+            <input [formControl]="projectGroup.get('editor')" type="text" class="form-control" id="editor" placeholder="Bearbeiter">
           </div>
         </div>
         <div class="row">
@@ -39,7 +39,7 @@
 
     </div>
     <div class="card-footer d-flex justify-content-end">
-      <button (click)="submitNewProject()" type="button" class="btn"> Weiter... </button>
+      <button (click)="submitNewProject()" type="button" class="btn"> Weiter</button>
     </div>
   </div>
 
