--- a/src/app/components/calculation/project-calc/calc-pages/other-calc/other-calc.page.html
+++ b/src/app/components/calculation/project-calc/calc-pages/other-calc/other-calc.page.html
@@ -1,1 +1,16 @@
+<div *ngIf="this.currentProject.resists.length > 0; else noTubes" class="container-fluid">
+  <div *ngFor="let resist of this.currentProject.resists">
+    cxvxc
+  <div class="row" style="text-align: left;">
+    <div class="col-lg-3"> <span> Bemerkung </span> <input class="form-control" type="text"> </div>
+    <div class="col-lg-3"> <span> Stk. </span> <input class="form-control" type="text"> </div>
+    <div class="col-lg-3"> <span> PA </span><input class="form-control" type="text"> </div>
+  </div>
+</div>
+</div>
 
+<ng-template #noTubes>
+  <div class="container" style="margin-top: 20px;">
+  <span style="font-size: 16px;"> Noch keine Einbauwiederstände hinzugefügt! </span>
+  </div>
+</ng-template>
