added excel module and modal service

--- a/src/app/components/calculation/project-calc/calc-add/add-item.page.html
+++ b/src/app/components/calculation/project-calc/calc-add/add-item.page.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid overflow-auto">
   <div style="text-align: left;">
     Rohrwiederstand
     <div class="row" style="text-align: left;">
@@ -8,6 +8,25 @@
       <div class="col-lg-3"> <span> H mm </span> <input class="form-control" type="text"> </div>
       <div class="col-lg-3"> <span> L m  </span><input class="form-control" type="text"> </div>
       <div class="col-lg-3"> <span> k mm </span> <input class="form-control" type="text"> </div>
+    </div>
+  </div>
+  <div style="text-align: left;">
+    Einzelwiederstand
+    <div class="row" style="text-align: left;">
+      <div class="col-lg-3"> <span> Bez. </span> <input class="form-control" type="text"> </div>
+      <div class="col-lg-3"> <span> V1 m^3 /h </span><input class="form-control" type="text"> </div>
+      <div class="col-lg-3"> <span> D1 mm </span> <input class="form-control" type="text"> </div>
+      <div class="col-lg-3"> <span> V2 m^3 /h  </span><input class="form-control" type="text"> </div>
+      <div class="col-lg-3"> <span> D2 mm </span> <input class="form-control" type="text"> </div>
+      <div class="col-lg-3"> <span> Zeta </span><input class="form-control" type="text"> </div>
+      <div class="col-lg-3"> <span> Stk. </span><input class="form-control" type="text"> </div>
+    </div>
+  </div>
+  <div style="text-align: left;">
+    Einbauwiederstand
+    <div class="row" style="text-align: left;">
+      <div class="col-lg-6"> <span> Bemerkung </span> <input class="form-control" type="text"> </div>
+      <div class="col-lg-6"> <span> Stk. </span> <input class="form-control" type="text"> </div>
     </div>
   </div>
 </div>
