--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
 
   <div class="content container-fluid">
       <div class="row">
-        <div class="col-2">
+        <div class="col-lg-2">
           <div class="sidebar">
             <div class="sidebar-header">
               <span style="font-size: 18px;"> Tools </span>
@@ -35,7 +35,7 @@
             </ul>
           </div>
         </div>
-        <div class="col-10">
+        <div class="col-lg-10">
               <router-outlet class="h-100"></router-outlet>
         </div>
       </div>
