--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -48,12 +48,15 @@
 
     .list-group .list-group-item {
       border: 0px;
-      padding: 5px 0 5px 0;
+      padding: 3px 0 3px 0;
 
       button {
+        padding-bottom: 10px;
+        padding-top: 10px;
         width: 100%;
         background-color: white;
         border: 0px;
+        border-radius: 0px;
       }
 
       button:hover {
@@ -78,3 +81,7 @@
   background-color: #506069;
 }
 
+.active {
+  color: white !important;
+  background-color: #CBD7DD !important;
+}
