Importet forgotten Modules

--- a/src/app/components/export/export.page.html
+++ b/src/app/components/export/export.page.html
@@ -2,3 +2,11 @@
 <div class="container-fluid section-header">
   Speichern
 </div>
+
+<div *ngIf="this.projectManagement.currentProject !== null; else noProject">
+  dasd
+</div>
+
+<ng-template #noProject>
+  sdas
+</ng-template>
