Added Export View

--- a/src/app/components/calculation/project-calc/calc-pages/resist-calc/resist-calc.page.html
+++ b/src/app/components/calculation/project-calc/calc-pages/resist-calc/resist-calc.page.html
@@ -19,7 +19,7 @@
 </div>
 
 <ng-template #noTubes>
-  <div class="container" style="margin-top: 20px;">
-   <span style="font-size: 16px;"> Noch keine Einzelwiederstände hinzugefügt! </span>
+  <div class="container warning-message-container">
+   <span> Noch keine Einzelwiederstände hinzugefügt! </span>
   </div>
 </ng-template>
