--- a/src/app/components/calculation/project-calc/calc-pages/tube-calc/tube-calc.page.html
+++ b/src/app/components/calculation/project-calc/calc-pages/tube-calc/tube-calc.page.html
@@ -16,7 +16,7 @@
 </div>
 
   <ng-template #noTubes>
-    <div class="container" style="margin-top: 20px;">
-        <span style="font-size: 16px;"> Noch keine Rohrreibungsverlust hinzugefügt! </span>
+    <div class="container warning-message-container">
+        <span> Noch keine Rohrreibungsverlust hinzugefügt! </span>
     </div>
   </ng-template>
